<resources>
    <string name="app_name">GuessingGame</string>
    <string name="main_welcome">Welcome to the High or Low guessing game!</string>
    <string name="main_description">Guess right 5 times to win.</string>
    <string name="main_name_prompt">Please enter your name:</string>
    <string name="main_default_player">Player</string>
    <string name="main_play_button">Play</string>
    <string name="game_thinking">I\'m thinking of a number between 1 and 10</string>
    <string name="game_higher_or_lower">Is it higher or lower than:</string>
    <string name="game_higher_button">Higher</string>
    <string name="game_lower_button">Lower</string>
    <string name="game_player_score">Score:</string>
    <string name="congrats_topper">Congratulations</string>
    <string name="congrats_you_won">You Won!</string>
    <string name="congrats_again_button">Play Again</string>
    <string name="congrats_new_button">New Player</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>